[gd_scene load_steps=6 format=3 uid="uid://l6gqfttchxac"]

[ext_resource type="Script" uid="uid://cp2yjwicigyon" path="res://project/menus/components/timeline_meta_card/timeline_meta_card.gd" id="1_v5tyl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v5tyl"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_4dv70"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/PanelContainer/TimelineThumbnail:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_e4q50"]
resource_name = "hover"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/PanelContainer/TimelineThumbnail:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.643137)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_074rb"]
_data = {
&"RESET": SubResource("Animation_4dv70"),
&"hover": SubResource("Animation_e4q50")
}

[node name="TimelineMetaCard" type="Container"]
offset_right = 160.0
offset_bottom = 117.0
mouse_filter = 0
script = ExtResource("1_v5tyl")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="UserLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(160, 90)
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_v5tyl")

[node name="TimelineThumbnail" type="TextureRect" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
expand_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_074rb")
}

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
